--- a/src/css/ListColumn.css
+++ b/src/css/ListColumn.css
@@ -7,3 +7,8 @@
   padding-top: 5vh;
   justify-content: start;
 }
+
+.boardContentArea {
+  width: inherit !important;
+  height: inherit !important;
+}
