Styled lists and main background color, this will be subject to change in the future

--- a/src/css/DragnDropContainer.css
+++ b/src/css/DragnDropContainer.css
@@ -1,5 +1,6 @@
-.lists-container {
+.lists_container {
   padding-top: 10vh;
   display: flex !important;
-  justify-content: row !important;
+  justify-content: space-between !important;
+  flex-direction: row !important;
 }
